<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KiiCloudAdvent2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="signup_done">Sign up is succeeded!</string>
    <string name="signup_failed">Failed to sign up</string>
    <string name="login">Log in</string>
    <string name="login_done">Login is succeeded</string>
    <string name="login_failed">Failed to log in</string>
    <string name="main_user_scope">User scope</string>
    <string name="user_scope_err_load">Failed to load user\'s memo</string>
    <string name="action_add">Add</string>
    <string name="user_scope_err_create">Failed to create memo</string>
    <string name="main_group">Group</string>
    <string name="group_create">Create group</string>
    <string name="group_name">Group name</string>
    <string name="group_created">Group is created id=%1$s</string>
    <string name="group_create_failed">Failed to create group</string>
    <string name="main_find_user">Find user</string>
    <string name="find_user_name">Username</string>
    <string name="find_user">Find user</string>
    <string name="find_user_not_found">User not found</string>
    <string name="find_user_found">User found id=%1$s</string>

</resources>
